# wx-notepad-plus-plus

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  README.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml
.github/rulesets/: master-protection.json
.github/workflows/: build.yml  pages.yml  release.yml  spike-linux.yml
PowerEditor/: CMakeLists.txt
cmake/: NppLibsVersion.h.in
cmake/toolchains/: riscv64-linux-gnu.cmake
docs/: ARCHITECTURE.md  CREDITS.md  CROSS_PLATFORM_PLAN.md  FUTURE_PLANS.md  GOALS.md  LICENSE_AUDIT.md  MISSING_FUNCTIONALITY.md  NPP_PLUGINS_CROSS_PLATFORM.md  PLUGINS_ADMIN_DESIGN.md  PLUGIN_API_PLAN.md  SIGNING.md  WXWIDGETS_MIGRATION_PLAN.md
include/nib/: nib.h
include/npp-compat/: Docking.h  Notepad_plus_msgs.h  PluginInterface.h  README.md  abi_layout_asserts.h  menuCmdID.h  npp_plugin_port.h
installer/linux/: build-appimage.sh  build-deb.sh  build-flatpak.sh  build-rpm.sh  io.github.Alpaq92.WxNote.desktop  io.github.Alpaq92.WxNote.metainfo.xml  io.github.Alpaq92.WxNote.yml  io.github.Alpaq92.WxNotepadPlusPlus.desktop  io.github.Alpaq92.WxNotepadPlusPlus.metainfo.xml  io.github.Alpaq92.WxNotepadPlusPlus.yml  wxnote.desktop  wxnote.spec  wxnpp.desktop  wxnpp.spec
installer/macos/: build-dmg.sh
installer/windows/: wxnote.nsi  wxnpp.iss  wxnpp.nsi
lexilla/: CMakeLists.txt
resources/: app.rc  app.rc.in  contextMenu.xml  stylers.model.xml
resources/fonts/: CREDITS.md
resources/icons/: CREDITS.md
resources/icons-colored/: CREDITS.md
resources/icons-fatcow/: CREDITS.md
resources/icons-fugue/: CREDITS.md
resources/icons-iconpark/: CREDITS.md
resources/icons-iconpark-bold/: CREDITS.md
resources/icons-solar/: CREDITS.md
resources/icons-streamline/: CREDITS.md
resources/locale/: po2mo.py  wxn.pot  wxnpp.pot
resources/locale/de/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/de_DE/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/es/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/es_ES/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/fr/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/fr_FR/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/ja/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/ja_JP/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/ko/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/ko_KR/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/pl/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/pl_PL/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/ru/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/ru_RU/LC_MESSAGES/: wxn.mo  wxnpp.mo
resources/locale/zh/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/locale/zh_CN/LC_MESSAGES/: wxn.mo  wxn.po  wxnpp.mo  wxnpp.po
resources/themes/: Bespin.xml  Black board.xml  Choco.xml  DansLeRuSH-Dark.xml  DarkModeDefault.xml  Deep Black.xml  Dracula.xml  GitHub Dark.xml  GitHub Light.xml  Hello Kitty.xml  HotFudgeSundae.xml  Mono Industrial.xml  Monokai.xml  MossyLawn.xml  Navajo.xml  Nord.xml  Obsidian.xml  One Dark.xml  One Light.xml  Plastic Code Wrap.xml  Ruby Blue.xml  Solarized-light.xml  Solarized.xml  Twilight.xml  Vibrant Ink.xml  Zenburn.xml  khaki.xml  vim Dark Blue.xml
scintilla/: CMakeLists.txt
scripts/: migrate_po_strip_accels.py  site_dev_server.py
site/: CREDITS.md  README.md  index.html
site/assets/css/: style.css
site/assets/js/: script.js
site/docs/: README.md  _sidebar.md  command-line.md  comparison.md  custom-shortcuts.md  faq.md  getting-started.md  index.html  interface.md  languages.md  menus.md  plugins.md  preferences.md  shortcuts.md  terminal.md  themes.md  workspace.md
spike/: CMakeLists.txt  app_icon_svg.h  main.cpp
spike/test_plugin/: CMakeLists.txt
src/: app_icon_svg.h  command_ids.h  conflict_engine.h  diff_myers.h  gtk_native.cpp  hash_algos.h  keymap_schemes.h  keymap_store.h  macos_native.mm  main.cpp  menu_builder.h  menu_data_automation.h  menu_data_document.h  menu_data_edit.h  menu_data_encoding.h  menu_data_file.h  menu_data_help.h  menu_data_language.h  menu_data_macro.h  menu_data_plugins.h  menu_data_run.h  menu_data_search.h  menu_data_selection.h  menu_data_settings.h  menu_data_tools.h  menu_data_view.h  menu_data_window.h  menu_labels_automation.h  menu_labels_document.h  menu_labels_edit.h  menu_labels_encoding.h  menu_labels_file.h  menu_labels_help.h  menu_labels_macro.h  menu_labels_plugins.h  menu_labels_run.h  menu_labels_search.h  menu_labels_selection.h  menu_labels_settings.h  menu_labels_tools.h  (+17 more)
src/plugins/nib_test_plugin/: CMakeLists.txt  nib_test_plugin.cpp
src/plugins/test_plugin/: CMakeLists.txt  TestPlugin.cpp
tests/: bridge_selftest.cpp  charset_selftest.cpp  diff_myers_test.cpp  hash_test.cpp  hunspell_selftest.cpp  keymap_selftest.cpp  terminal_selftest.cpp
tools/: generate_streamline_icons.py  po2mo.c
